--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -179,7 +179,7 @@ body {
     font-size: 40px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%) translateX(-50%);
+    @include transform(translateY(-50%) translateX(-50%));
 
     &.fixed {
       color: $uber-color;
